# godamn

./: .clang-format  .editorconfig  .gitignore  .gitmodules  3RDPARTY.md  CMakeLists.txt  CMakeSettings.json  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Event.cpp  Event.h  EventMethodsInterfaces.h  FindSFML.cmake  GameState.cpp  GameState.h  HandlesEvents.cpp  HandlesEvents.h  IRelativePos.h  Map.cpp  Map.h  Player.cpp  Player.h  README.md  Tile.cpp  Tile.h  TileEnum.h  TiledMap.cpp  TiledMap.h  cpp.hint  main.cpp  main.h
Config/: CMakeLists.txt  EntityConfigStore.cpp  EntityConfigStore.h  Store.cpp  Store.h
Entities/: AnonymousEntity.h  Building.cpp  Building.h  CMakeLists.txt  Entity.cpp  Entity.h  Hud.cpp  Hud.h
Entities/Tiles/: CMakeLists.txt  Tile.cpp  Tile.h  TileEnum.h  TiledMap.cpp  TiledMap.h
Entities/Tiles/Buildings/: Building.cpp  Building.h  CMakeLists.txt  Chapel.cpp  Chapel.h  LoggingCamp.cpp  LoggingCamp.h  Mine.cpp  Mine.h  Temple.cpp  Temple.h
Events/: CMakeLists.txt  Event.cpp  Event.h  EventMethodsInterfaces.h
Foundation/: CMakeLists.txt  Container.cpp  Container.h  Exception.cpp  Exception.h  Object.cpp  Object.h
MapGenerator/: CMakeLists.txt  Generator.cpp  Generator.h  IPoint.cpp  IPoint.h  game_map.cpp  game_map.h  res_generator.cpp  res_generator.h
Scenery/: CMakeLists.txt  Scene.cpp  Scene.h  SceneryException.h  SceneryManager.cpp  SceneryManager.h
Screen/: CMakeLists.txt  Renderer.cpp  Renderer.h  ScreenObject.cpp  ScreenObject.h
Structs/: CMakeLists.txt  EntityConfig.h  ResBuilding.h  ResPeople.h  Resources.h
Utils/: CMakeLists.txt  Crypto.cpp  Crypto.h  CryptoException.h  Utils.h  utils.cpp
assets/: godamn.drawio  tiles.afdesign
assets/Graphics/: Forest.xcf  Gras_Building0.xcf  Gras_Building70.xcf  Grass.xcf  Grass_Lumber.xcf  Grass_Miner.xcf  Grass_Temple.xcf  Mix.xcf  Moutain_Building0.xcf  Moutain_Building70.xcf  Moutain_Chample.xcf  Moutain_Temple.xcf  Temple.xcf  moutain.xcf  moutain_miner.xcf  moutain_stone.xcf  stone.xcf  test las_deleted.xcf  wszystko.xcf  wszystko1.xcf
assets/Graphics/Deleted/: Bez nazwy.xcf
tests/: CMakeLists.txt  crypto.cpp  tests.cpp  utils.cpp
